--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Binchi Zhang"
-  avatar           : "selfie.png"
+  avatar           : "identification.jpg"
   bio              : "Ph.D. student @ University of Virginia, interested in graph mining and federated learning"
   location         : "Charlottesville, US"
 #  employer         :
