--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Binchi Zhang"
+title                    : "Binchi Zhang (张斌弛)"
 title_separator          : "-"
 name                     : &name "Binchi Zhang"
 description              : &description "Ph.D. student @ University of Virginia"
