--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
 #   flickr           :
 #   facebook         :
 #   foursquare       :
-  github           : "Zhang-Binchi"
+  github           : "zhangbinchi"
 #   google_plus      :
 #   keybase          :
 #   instagram        :
