--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ name                     : &name "Binchi Zhang"
 description              : &description "Ph.D. student @ University of Virginia"
 url                      : https://Zhang-Binchi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Zhang-Binchi.github.io"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+repository               : "zhangbinchi.github.io"
+teaser                   : "identification.jpg" # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
