--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Binchi Zhang (张斌弛)"
 title_separator          : "-"
 name                     : &name "Binchi Zhang"
 description              : &description "Ph.D. student @ University of Virginia"
-url                      : https://Zhang-Binchi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zhangbinchi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zhangbinchi.github.io"
 teaser                   : "identification.jpg" # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
