--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Binchi Zhang (张斌弛)"
 title_separator          : "-"
 name                     : &name "Binchi Zhang"
-description              : &description "Ph.D. student @ University of Virginia"
+description              : &description "Ph.D. student at University of Virginia"
 url                      : https://zhangbinchi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zhangbinchi.github.io"
