--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Binchi Zhang"
-  avatar           : "identification.jpg"
-  bio              : "Ph.D. student @ University of Virginia, interested in graph mining and federated learning"
+  avatar           : "identification.png"
+  bio              : "Ph.D. student at University of Virginia, interested in graph mining and federated learning"
   location         : "Charlottesville, US"
 #  employer         :
 #  pubmed           :
