--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Binchi Zhang"
   avatar           : "identification.png"
   bio              : "Ph.D. student at University of Virginia, interested in graph mining and federated learning"
-  location         : "Charlottesville, US"
+  location         : "Charlottesville, VA"
 #  employer         :
 #  pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=c8Z36PAAAAAJ"
