--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Binchi Zhang"
   avatar           : "identification.png"
-  bio              : "Ph.D. student at University of Virginia, interested in graph mining and federated learning"
+  bio              : "Ph.D. student at University of Virginia"
   location         : "Charlottesville, VA"
 #  employer         :
 #  pubmed           :
