--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
 #   instagram        :
 #   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
 #   lastfm           :
-  linkedin         : "www.linkedin.com/in/binchi-zhang-274922221"
+  linkedin         : "binchi-zhang-274922221"
   orcid            : "https://orcid.org/0000-0001-7321-3822"
 #   pinterest        :
 #   soundcloud       :
