--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Binchi Zhang"
-  avatar           : "selfie_truncated.jpg"
+  avatar           : "Image (5).jpeg"
   bio              : "Ph.D. candidate at University of Virginia"
   location         : "Charlottesville, VA"
 #  employer         :
